# qstyleshaker

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: parent_table.h  qstyleshaker.cpp
